--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=3711b2aed74b35ce2f66",
+    "/css/app.css": "/css/app.css?id=924f3937c129b1800180"
 }
