--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "livewire/livewire": "^1.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "directorytree/watchdog": "dev-master"
     },
     "require-dev": {
-        "directorytree/watchdog": "dev-master",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
