--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
+
+WATCHDOG_NOTIFICATION_EMAIL=your@email.com
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
