Added timezone config to env

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=daily
 
+WATCHDOG_SCAN_FREQUENCY=5
+WATCHDOG_DATE_TIMEZONE=UTC
 WATCHDOG_NOTIFICATION_EMAIL=your@email.com
 
 DB_CONNECTION=mysql
