--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "livewire/livewire": "^1.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-flash": "^1.6",
+        "webstronauts/unpoly": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
