--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
+        "sweetalert2": "^9.15.1",
         "turbolinks": "^5.2.0",
+        "unpoly": "^0.62.0",
         "vue-template-compiler": "^2.6.11"
     }
 }
